src/objects/Icon__c.object
<CustomObject>
    <description>Table to store font-based icons to be used on public facing websites.</description>
    <fields>
        <fullName>Alt_Text__c</fullName>
        <formula>Name &amp; &quot; &quot; &amp; &quot;Icon&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alt Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Icon_Type__c</fullName>
        <description>Type of icon</description>
        <inlineHelpText>Select the type of icon you are adding to the Icon library.</inlineHelpText>
        <label>Icon Type</label>
        <picklist>
            <picklistValues>
                <fullName>Social</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>class_name__c</fullName>
        <description>technical name of class</description>
        <label>Class Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Icon</label>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Social</fullName>
        <columns>NAME</columns>
        <columns>class_name__c</columns>
        <columns>Icon_Type__c</columns>
        <columns>Alt_Text__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Icon_Type__c</field>
            <operation>equals</operation>
            <value>Social</value>
        </filters>
        <label>Social</label>
    </listViews>
    <nameField>
        <label>Icon Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Icons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>